# ai-devops-platform

./: .env  README.md
.github/: README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: b2ad7c922cb1_create_users_table.py
backend/src/ai_devops_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/app/: main.py
backend/src/app/api/: dependencies.py
backend/src/app/api/v1/: router.py
backend/src/app/api/v1/routes/: auth.py  health.py
backend/src/app/core/: config.py  dependencies.py  lifespan.py  logging.py  security.py
backend/src/app/core/config/: app.py  settings.py
backend/src/app/core/settings/: __init__.py  ai.py  api.py  cors.py  database.py  loader.py  observability.py  redis.py  security.py
backend/src/app/db/: __init__.py  registry.py  session.py
backend/src/app/exceptions/: __init__.py  custom.py  handlers.py  responses.py
backend/src/app/middleware/: __init__.py  cors.py  gzip.py  registry.py  request_context.py  request_logging.py  security_headers.py
backend/src/app/mixins/: __init__.py  timestamp.py  uuid.py
backend/src/app/models/: __init__.py  role.py  token.py  user.py
backend/src/app/repositories/: base.py  user_repository.py
backend/src/app/schemas/: auth.py  common.py  health.py
backend/src/app/security/: __init__.py  hashing.py  jwt.py
backend/src/app/services/: auth_service.py  user_service.py
backend/tests/: test_auth.py  test_health.py
docs/: enterprise-platform-design.md  postgresql-database-schema-design.md  react-dashboard-wireframes.md  repository-structure.md  rest-api-design.md
frontend/: README.md  package.json
frontend/src/: main.tsx  styles.css
helm/: README.md
infrastructure/: README.md
kubernetes/: README.md
terraform/: README.md
