[project]
name = "ai-devops-platform-backend"
version = "0.1.0"
description = "AI Powered DevOps Platform Backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
